--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
             </button>
             
             <button mat-icon-button>
-                <mat-icon style="font-size: 2.5rem; margin-right: 40%;" [ngStyle]="{'color': '#25C54D'}">account_circle</mat-icon>
+                <mat-icon style="font-size: 2.5rem; margin-right: 40%;" [ngStyle]="{'color': '#E74E00'}">account_circle</mat-icon>
             </button>
         </div>
     </mat-toolbar>
@@ -41,38 +41,38 @@
                     </mat-card>
                 </div> -->
                 <mat-list-item routerLink="/home">
-                    <mat-icon mat-list-icon>home</mat-icon>
-                    <span>Inicio</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">home</mat-icon>
+                    <span class="nav-item-text">Inicio</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/home">
-                    <mat-icon mat-list-icon>perm_contact_calenda</mat-icon>
-                    <span>Dispensa</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">perm_contact_calenda</mat-icon>
+                    <span class="nav-item-text">Dispensa</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/recipes">
-                    <mat-icon mat-list-icon>local_library</mat-icon>
-                    <span>Recetas</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">local_library</mat-icon>
+                    <span class="nav-item-text">Recetas</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/restaurants">
-                    <mat-icon mat-list-icon>restaurant</mat-icon>
-                    <span>Restaurantes</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">restaurant</mat-icon>
+                    <span class="nav-item-text">Restaurantes</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/search">
-                    <mat-icon mat-list-icon>search</mat-icon>
-                    <span>Buscar</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">search</mat-icon>
+                    <span class="nav-item-text">Buscar</span>
                 </mat-list-item>
 
                 <mat-list-item routerLink="/profile">
-                    <mat-icon mat-list-icon>person</mat-icon>
-                    <span>Perfil</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">person</mat-icon>
+                    <span class="nav-item-text">Perfil</span>
                 </mat-list-item>
 
                 <mat-list-item>
-                    <mat-icon mat-list-icon>logout</mat-icon>
-                    <span>Logout</span>
+                    <mat-icon mat-list-icon style="color: #E74E00;">logout</mat-icon>
+                    <span class="nav-item-text">Logout</span>
                 </mat-list-item>
 
 
