--- a/src/app/components/menu/home/home.component.html
+++ b/src/app/components/menu/home/home.component.html
@@ -104,7 +104,7 @@
         <div class="row" *ngIf="recipeList.length < 5">
             <div class="col text-center">
                 <span class="error-message">{{ errorMessage }}</span>
-                <div><button mat-raised-button routerLink="../recipes/create-recipe" class="btn-create">Agrega tú
+                <div><button mat-raised-button routerLink="../recipes/create-recipe" class="btn-create">Agrega tu
                         receta</button></div>
             </div>
         </div>
