--- a/src/app/components/menu/home/recipes/recipes.component.html
+++ b/src/app/components/menu/home/recipes/recipes.component.html
@@ -3,7 +3,7 @@
         <mat-card>
             <div class="row">
                 <div class="col my-auto"><span><b>{{ numberOfRecipes }}</b> recetas disponibles</span></div>
-                <div class="col-auto"><button mat-raised-button routerLink="create-recipe">Agrega tú receta</button></div>
+                <div class="col-auto"><button mat-raised-button routerLink="create-recipe">Agrega tu receta</button></div>
             </div>
         </mat-card>
     </div>
