--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -17,9 +17,9 @@
                     <h4 style="margin:auto;">🍴 {{ recipesName[i] }} 🍴</h4>
                 </button>
             </mat-menu>
-            <button mat-icon-button >
-                <mat-icon >favorite_border</mat-icon>
-            </button>
+            <!-- <button mat-icon-button >
+                 <mat-icon >favorite_border</mat-icon> 
+            </button> -->
             
             <button mat-icon-button>
                 <mat-icon style="font-size: 2.5rem; margin-right: 40%;" [ngStyle]="{'color': '#E74E00'}">account_circle</mat-icon>
