--- a/src/app/components/menu/home/recipes/search-recipes/search-recipes.component.html
+++ b/src/app/components/menu/home/recipes/search-recipes/search-recipes.component.html
@@ -1,19 +1,24 @@
 <div style="min-height: 90vh;" class="container mt-4">
     <mat-card-content>
       <form [formGroup]="searchForm">
-        <mat-form-field appearance="fill" class="recipe-input">
-          <input matInput #input formControlName="searchQuery" placeholder="Buscar recetas">
-        </mat-form-field>
+        <div class="container">
+          <mat-form-field appearance="fill" class="recipe-input">
+            <input matInput #input formControlName="searchQuery" placeholder="Buscar recetas">
+          </mat-form-field>
+        </div>
         <div class="checkbox-container">
           <mat-checkbox formControlName="easy">Fácil</mat-checkbox>
           <mat-checkbox formControlName="medium">Intermedio</mat-checkbox>
           <mat-checkbox formControlName="hard">Difícil</mat-checkbox>
         </div>
-        <mat-form-field appearance="fill" class="recipe-input">
-          <input matInput [matDatepicker]="picker" formControlName="selectedDate" placeholder="Seleccionar fecha">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+        <div class="container">
+          <mat-form-field appearance="fill" class="recipe-input">
+            <input matInput [matDatepicker]="picker" formControlName="selectedDate" placeholder="Seleccionar fecha">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        
       </form>
     </mat-card-content>
   </div>
