feature-help_section

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -70,6 +70,11 @@
                     <span class="nav-item-text">Perfil</span>
                 </mat-list-item>
 
+                <mat-list-item routerLink="/help">
+                    <mat-icon mat-list-icon style="color: #E74E00;">help_outline</mat-icon>
+                    <span class="nav-item-text">Ayuda</span>
+                </mat-list-item>
+
                 <mat-list-item>
                     <mat-icon mat-list-icon style="color: #E74E00;">logout</mat-icon>
                     <span class="nav-item-text">Logout</span>
