--- a/src/app/components/menu/home/recipes/search-recipes/search-recipes.component.html
+++ b/src/app/components/menu/home/recipes/search-recipes/search-recipes.component.html
@@ -1,25 +1,55 @@
 <div style="min-height: 90vh;" class="container mt-4">
-    <mat-card-content>
-      <form [formGroup]="searchForm">
-        <div class="container">
-          <mat-form-field appearance="fill" class="recipe-input">
-            <input matInput #input formControlName="searchQuery" placeholder="Buscar recetas">
-          </mat-form-field>
-        </div>
-        <div class="checkbox-container">
-          <mat-checkbox formControlName="easy">Fácil</mat-checkbox>
-          <mat-checkbox formControlName="medium">Intermedio</mat-checkbox>
-          <mat-checkbox formControlName="hard">Difícil</mat-checkbox>
-        </div>
-        <div class="container">
-          <mat-form-field appearance="fill" class="recipe-input">
-            <input matInput [matDatepicker]="picker" formControlName="selectedDate" placeholder="Seleccionar fecha">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        </div>
-        
-      </form>
-    </mat-card-content>
-  </div>
-  
+  <mat-card-content>
+    <!-- Búsqueda de recetas por rango de fechas -->
+    <form [formGroup]="searchForm">
+      <div class="container">
+        <mat-form-field appearance="fill" class="recipe-input">
+          <input matInput #input formControlName="startDate" placeholder="Fecha de inicio" [matDatepicker]="startDatePicker">
+          <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #startDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="container">
+        <mat-form-field appearance="fill" class="recipe-input">
+          <input matInput #input formControlName="endDate" placeholder="Fecha de fin" [matDatepicker]="endDatePicker">
+          <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #endDatePicker></mat-datepicker>
+        </mat-form-field>
+      </div>
+    </form>
+
+    <!-- Búsqueda de recetas por dificultad -->
+    <form [formGroup]="searchForm">
+      <div class="checkbox-container">
+        <mat-checkbox formControlName="easy">Fácil</mat-checkbox>
+        <mat-checkbox formControlName="medium">Intermedio</mat-checkbox>
+        <mat-checkbox formControlName="hard">Difícil</mat-checkbox>
+      </div>
+    </form>
+
+    <!-- Búsqueda de recetas por nombre -->
+    <form [formGroup]="searchForm">
+      <div class="container">
+        <mat-form-field appearance="fill" class="recipe-input">
+          <input matInput #input formControlName="recipeName" placeholder="Buscar por nombre de receta">
+        </mat-form-field>
+      </div>
+    </form>
+
+    <!-- Búsqueda de recetas por calorías -->
+    <form [formGroup]="searchForm">
+      <div class="container">
+        <mat-form-field appearance="fill" class="recipe-input">
+          <input matInput #input formControlName="minCalories" placeholder="Mínimo de calorías">
+        </mat-form-field>
+      </div>
+      <div class="container">
+        <mat-form-field appearance="fill" class="recipe-input">
+          <input matInput #input formControlName="maxCalories" placeholder="Máximo de calorías">
+        </mat-form-field>
+      </div>
+    </form>
+  </mat-card-content>
+  <button mat-flat-button color="primary" class="search-button">Buscar</button>
+</div>
+
