--- a/src/app/components/menu/home/recipes/help-seccion/help.component.css
+++ b/src/app/components/menu/home/recipes/help-seccion/help.component.css
@@ -3,9 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 40vh; /* Esto ajusta la altura para llenar la pantalla verticalmente */
-    padding: 20px; /* Agrega espacio alrededor del formulario */
+    padding: 2vh; /* Agrega espacio alrededor del formulario */
   }
-  
+
   .Formulario-Consulta {
     margin: auto;
     width: 80%; /* Asegura que el formulario ocupe todo el ancho disponible */
