--- a/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.html
+++ b/src/app/components/menu/home/recipes/view-recipe/view-recipe.component.html
@@ -80,6 +80,36 @@
 
                         </div>
                     </mat-tab>
+                    <mat-tab label="Comentarios">
+                        <div class="mat-tab-contain">
+                            <!-- Listado de comentarios -->
+                            <div *ngFor="let comment of commentsOfRecipe; let i = index">
+                                <div class="comment">
+                                    <div class="comment-info">
+                                        <h4>{{ comment.name }}</h4>
+                                    </div>
+                                    <div class="comment-text">
+                                        <p>{{ comment.comment }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <!-- Formulario para agregar comentarios -->
+                            <div class="add-comment">
+                                <h3>Agregar Comentario</h3>
+                                <form (ngSubmit)="addComment()" class="comment-form">
+                                    <div class="form-group">
+                                        <input type="text" [(ngModel)]="newComment.name" name="name" placeholder="Tu Nombre" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea [(ngModel)]="newComment.comment" name="comment" rows="4" placeholder="Tu Comentario" required></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Enviar Comentario</button>
+                                </form>
+                            </div>
+                        </div>
+                    </mat-tab>
+                    
                 </mat-tab-group>
             </div>
         </div>
