--- a/src/app/components/user/profile/profile.component.css
+++ b/src/app/components/user/profile/profile.component.css
@@ -124,3 +124,11 @@ mat-card mat-title {
 .btn-delete:hover{
     color: #F94C66;
 }
+
+/* Agrega esto en tu archivo CSS */
+.btn-edit-profile {
+    background-color: #3498db; /* Color de fondo del botón */
+    color: #fff; /* Color del texto del botón */
+    margin-top: 1rem; /* Puedes ajustar el margen según tus necesidades */
+  }
+  
