--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -157,7 +157,7 @@
 
             <mat-tab>
             <ng-template mat-tab-label>
-              <span class="item-count">{{ ingredientsExcludedCount }}</span><br>
+              <span class="item-count">5</span><br>
               <span class="item-name">Usuarios seguidos</span>
             </ng-template>
             <div class="container mat-tab-container">
@@ -167,8 +167,8 @@
               <div>
                 <mat-list>
                   <mat-list-item *ngFor="let item of items">
-                    <h3 matLine>{{item.name}}</h3>
-                    
+                    <h3 matLine>{{item.followerUsername}}</h3>
+
                   </mat-list-item>
                 </mat-list>
               </div>
