feat add EditProfileDialog
Se agrego la ventana para editar perfil

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -177,6 +177,8 @@
           </mat-tab>
 
         </mat-tab-group>
-        <button mat-raised-button class="btn-edit-profile">Editar Perfil</button>
+        <button mat-menu-item [disabled]="false" [hidden]="false">
+            <span>Editar Perfil</span>
+          </button>
     </div>
 </div>
